@@ -5,6 +5,7 @@
   * Added Nokogiri::LIBXML_ICONV_ENABLED
   * Alias Node#[] to Node#attr
   * XML::Node#next_element added
+  * XML::Node#> added for searching a nodes immediate children
 
 * Bugfixes
 
